assets/css/default/style.css
html {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
}

ul {
	margin: 0;
	padding: 0;
}

.ce-document {
	height: 100%;
	margin: 0;
	background-color: #333333;
	
	box-sizing: border-box;
	padding-top: 30px;
}

.ce-application-menu {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
}

ul.ce-menu {
	height: 30px;
	list-style: none;
	background-color: #CCCCCC;
}

ul.ce-menu > li {
	float: left;
	height: 10px;
	line-height: 10px;
	padding: 10px;
	cursor: default;
}

ul.ce-menu > li:hover {
	background-color: #CCCCDD;
}

ul.ce-menu > li.active ul {
	
}

.ce-window {
	position: absolute !important;
	border: solid 1px #000000;
	width: 400px;
	overflow: hidden;
	padding-top: 30px;
}

.ce-window-title {
	position: relative;
	background-color: #CCCCCC;
	margin-top: -30px;
	height: 30px;
	font-weight: bold;
	padding-left: 10px;
	line-height: 30px;
	cursor: default;
	user-select: none;
}

.ce-window-title.active {
	background-color: #999999;	
}

.ce-window-close {
	position: absolute;
	top: 0;
	right: 0;
	width: 30px;
	height: 30px;
	line-height: 30px;
	text-align: center;
}

.ce-window-close:hover {
	background-color: #CCCCDD;
}

.ce-window-body {
	background-color: #FFFFFF;
	overflow: auto;
	height: 100%;
	width: 100%;
}

.ce-file, .ce-dir {
	display: block;
	color: #000000;
	text-decoration: none;
	padding: 4px;
	cursor: default;
}

.ce-dir:before, .ce-file:before {
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}


.ce-dir, .ce-file {
	padding-left: 32px;
}

.ce-dir:before, .ce-file:before {
	float: left;
	margin-left: -24px;
}

.ce-dir:before {
	content: "\f07b";
	/*content: "\f114";*/
	color: #009900;
}

.ce-file:before {
	content: "\f016";
}


.ce-file.selected, .ce-dir.selected {
	background-color: #0099FF;
	color: #FFFFFF;
}

.ce-window .ui-resizable-se {
	width: 12px;
	height: 12px;
	right: -5px;
	bottom: -5px;
	background-position: 16px 16px;
}

.ui-resizable-handle {
	position: absolute;
	font-size: 0.1px;
	display: block;
	-ms-touch-action: none;
	touch-action: none;
}
.ui-resizable-disabled .ui-resizable-handle,
.ui-resizable-autohide .ui-resizable-handle {
	display: none;
}
.ui-resizable-n {
	cursor: n-resize;
	height: 7px;
	width: 100%;
	top: -5px;
	left: 0;
}
.ui-resizable-s {
	cursor: s-resize;
	height: 7px;
	width: 100%;
	bottom: -5px;
	left: 0;
}
.ui-resizable-e {
	cursor: e-resize;
	width: 7px;
	right: -5px;
	top: 0;
	height: 100%;
}
.ui-resizable-w {
	cursor: w-resize;
	width: 7px;
	left: -5px;
	top: 0;
	height: 100%;
}
.ui-resizable-se {
	cursor: se-resize;
	width: 12px;
	height: 12px;
	right: 1px;
	bottom: 1px;
}
.ui-resizable-sw {
	cursor: sw-resize;
	width: 9px;
	height: 9px;
	left: -5px;
	bottom: -5px;
}
.ui-resizable-nw {
	cursor: nw-resize;
	width: 9px;
	height: 9px;
	left: -5px;
	top: -5px;
}
.ui-resizable-ne {
	cursor: ne-resize;
	width: 9px;
	height: 9px;
	right: -5px;
	top: -5px;
}


.ce-editor {
	box-sizing: border-box;
	width: 100%;
	height: 100%;
	color: #000033;
}

